--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,3 +5,10 @@ DB_PORT=3306
 DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=mvc_express
+
+# JWT options
+JWT_SECRET = 
+JWT_TIMING = // 1h, 60s, 4d, u choose
+
+# Upload Directory
+AVATAR_DIRECTORY=public/uploads/
